Fixed Overflowing Paragraphs
Fixed an issue where paragraphs would overflow when viewing the web page on a smaller screen

--- a/main.scss
+++ b/main.scss
@@ -266,7 +266,8 @@ header {
 		margin-bottom: 40px;
 	}
 	p {
-		width: 420px;
+		width: 100%;
+		max-width: 420px;
 	}
 }
 
